--- a/package.json
+++ b/package.json
@@ -1,28 +1,38 @@
 {
-  "name": "unzip-stream",
+  "name": "@instamotion/unzip-stream",
   "version": "0.3.1",
   "description": "Process zip files using streaming API",
   "author": "Michal Hruby <michal.mhr@gmail.com>",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "maintainers": [
     {
-      "name": "Michal Hruby",
-      "email": "michal.mhr@gmail.com"
+      "name": "Danijel Hrvacanin",
+      "email": "d.hrvacanin@instamotion.com"
     }
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/mhr3/unzip-stream.git"
+    "url": "https://github.com/instamotion/unzip-stream.git"
   },
   "license": "MIT",
   "dependencies": {
     "binary": "^0.3.0",
-    "mkdirp": "^0.5.1"
+    "mkdirp": "^3.0.0"
   },
   "devDependencies": {
-    "dirdiff": ">= 0.0.1 < 1",
-    "stream-buffers": ">= 0.2.5 < 1",
-    "tap": "^11.0.1",
-    "temp": ">= 0.4.0 < 1"
+    "@instamotion/config-commitlint": "^0.9.0",
+    "@instamotion/config-prettier": "^0.9.0",
+    "@instamotion/eslint-config-backend": "^0.9.0",
+    "@instamotion/lint-scripts": "^0.9.0",
+    "commitlint": "^17.6.1",
+    "glob": "^10.1.0",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "lint-staged": "^13.2.1",
+    "release-it": "^15.10.1",
+    "temp": "^0.9.4"
   },
   "directories": {
     "example": "examples",
@@ -39,7 +49,22 @@
   ],
   "main": "unzip.js",
   "scripts": {
-    "test": "tap ./test/*.js",
-    "coverage": "tap ./test/*.js --cov --coverage-report=html"
+    "test": "jest",
+    "lint-staged": "lint-staged",
+    "lint-branch-name": "lint-branch-name",
+    "commitlint": "commitlint",
+    "test:coverage": "jest --coverage",
+    "postinstall": "husky install",
+    "lint": "eslint ./src --ext .js",
+    "pretty": "prettier --check ./src",
+    "pretty:fix": "prettier --write ./src",
+    "lint:fix": "npm run lint -- --fix"
+  },
+  "lint-staged": {
+    "src/**/*.(js|ts)": [
+      "npm run lint",
+      "npm run pretty",
+      "npm run test"
+    ]
   }
 }
