--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "binary": "^0.3.0",
-    "mkdirp": "^3.0.0"
+    "fs-extra": "^11.1.1"
   },
   "devDependencies": {
     "@instamotion/config-commitlint": "^0.9.0",
